adicionando documentação para createOpenigHandler
