# handler/createOpeningHandler.go
@@ -7,6 +7,18 @@ import (
 	"github.com/omericoramos/vagas-de-emprego/schema"
 )
 
+// @BasePath /api/v1
+
+// @Summary Create opening
+// @Description Create a new job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @param request body CreateOpeningRequest true "Request body"
+// @success 200 {object} CreateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [post]
 func CreateOpeningHandler(ctx *gin.Context) {
 
 	request := CreateOpeningRequest{}
